--- a/app/src/main/res/layout/activity_single_dashboard.xml
+++ b/app/src/main/res/layout/activity_single_dashboard.xml
@@ -35,6 +35,74 @@
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:backgroundTint="@color/primaryBackground"
+                    android:layout_marginStart="15dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:strokeColor="@color/primaryBackground">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent">
+
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/hotel_img"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:src="@drawable/png_hotel" />
+
+                        <LinearLayout
+                            android:id="@+id/llH"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            app:layout_constraintBottom_toBottomOf="@id/hotel_img"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/hotel_img">
+
+                            <TextView
+                                android:id="@+id/hotelName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Taj Hotel"
+                                android:textColor="@color/secondary"
+                                android:textSize="@dimen/H5"
+                                android:fontFamily="@font/roboto_bold"
+                                android:layout_marginStart="10dp"/>
+                            <TextView
+                                android:id="@+id/hotelLocation"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Kanpur, UP"
+                                android:textColor="@color/secondary"
+                                android:textSize="@dimen/H6"
+                                android:fontFamily="@font/roboto"
+                                android:layout_marginStart="10dp" />
+
+                        </LinearLayout>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/svg_arrow_down"
+                            android:padding="10dp"
+                            app:layout_constraintStart_toEndOf="@id/llH"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/primaryBackground"
                     android:layout_marginEnd="15dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -54,35 +122,42 @@
                             app:layout_constraintStart_toStartOf="parent"
                             android:src="@drawable/png_hotel" />
 
-                        <TextView
-                            android:id="@+id/name"
+                        <LinearLayout
+                            android:id="@+id/llP"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:orientation="vertical"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/profile"
-                            android:text="Arjun"
-                            android:textColor="@color/secondary"
-                            android:textSize="@dimen/H4"
-                            android:fontFamily="@font/roboto_bold"
-                            android:layout_marginStart="10dp"/>
-                        <TextView
-                            android:id="@+id/role"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:layout_constraintTop_toBottomOf="@id/name"
-                            app:layout_constraintStart_toEndOf="@+id/profile"
-                            android:text="Android"
-                            android:textColor="@color/secondary"
-                            android:textSize="@dimen/H4"
-                            android:fontFamily="@font/roboto"
-                            android:layout_marginStart="10dp" />
+                            app:layout_constraintBottom_toBottomOf="@id/profile">
+
+                            <TextView
+                                android:id="@+id/name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Arjun"
+                                android:textColor="@color/secondary"
+                                android:textSize="@dimen/H5"
+                                android:fontFamily="@font/roboto_bold"
+                                android:layout_marginStart="10dp"/>
+                            <TextView
+                                android:id="@+id/role"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Android"
+                                android:textColor="@color/secondary"
+                                android:textSize="@dimen/H6"
+                                android:fontFamily="@font/roboto"
+                                android:layout_marginStart="10dp" />
+
+                        </LinearLayout>
 
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/svg_arrow_down"
                             android:padding="10dp"
-                            app:layout_constraintStart_toEndOf="@id/role"
+                            app:layout_constraintStart_toEndOf="@id/llP"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent" />
