--- a/app/src/main/res/layout/item_amenities.xml
+++ b/app/src/main/res/layout/item_amenities.xml
@@ -7,12 +7,14 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/amenityIcon"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_margin="5dp"
         android:src="@drawable/svg_ac"/>
 
         <TextView
+            android:id="@+id/amenityName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Child-friendly activities"
@@ -22,6 +24,7 @@
             android:fontFamily="@font/roboto"/>
 
     <ImageView
+        android:id="@+id/remove"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_marginHorizontal="5dp"
