--- a/app/src/main/res/layout/item_icon.xml
+++ b/app/src/main/res/layout/item_icon.xml
@@ -7,6 +7,7 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/icon"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_margin="5dp"
