--- a/app/src/main/res/layout/activity_final_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_final_onboarding_screen.xml
@@ -4,21 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Authentication.LoginScreen">
+    tools:context=".onboarding.FinalOnboardingScreen">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frame1"
-        android:layout_width="700dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/frame2"
         android:background="@color/secondaryBackground">
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="300dp"
             android:layout_height="120dp"
+            android:transitionName="logo_img"
             android:layout_marginTop="16dp"
             android:src="@drawable/svg_logo"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,8 +40,10 @@
 
         <ImageView
             android:id="@+id/coverImg"
-            android:layout_width="500dp"
-            android:layout_height="500dp"
+            android:layout_width="400dp"
+            android:layout_height="0dp"
+            android:transitionName="onBoardingImg"
+            android:layout_marginVertical="20dp"
             android:src="@drawable/wait_for_service"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -69,6 +73,7 @@
                     android:id="@+id/demoBackbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:transitionName="backBtn"
                     android:layout_marginStart="50dp"
                     android:layout_marginTop="40dp"
                     android:src="@drawable/vector_back_btn"
@@ -136,8 +141,10 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="50dp"
                             android:fontFamily="@font/roboto"
+                            android:layout_marginStart="50dp"
+                            android:layout_marginEnd="30dp"
+                            android:layout_marginTop="10dp"
                             android:text="Congratulations!\nYou have successfully registered your Hotel Chain [chain_Name] with us.\n We just need to check a few things first, we will let you know when your one stop hotel solution is ready to go."
                             android:textColor="@color/black"
                             android:textSize="@dimen/H4"/>
