--- a/app/src/main/res/layout/activity_first_on_boarding_screen.xml
+++ b/app/src/main/res/layout/activity_first_on_boarding_screen.xml
@@ -8,12 +8,13 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frame1"
-        android:layout_width="700dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:background="@color/secondaryBackground"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/secondaryBackground">
+        app:layout_constraintEnd_toStartOf="@id/frame2">
 
         <ImageView
             android:id="@+id/logo"
@@ -21,6 +22,7 @@
             android:layout_height="120dp"
             android:layout_marginTop="25dp"
             android:src="@drawable/svg_logo"
+            android:transitionName="logo_img"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -38,8 +40,10 @@
             app:layout_constraintTop_toBottomOf="@id/logo"/>
 
         <ImageView
+            android:id="@+id/onBoardingImg"
             android:layout_width="400dp"
-            android:layout_height="500dp"
+            android:layout_height="0dp"
+            android:transitionName="onBoardingImg"
             android:src="@drawable/vector_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -70,6 +74,7 @@
                     android:id="@+id/demoBackbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:transitionName="backBtn"
                     android:layout_marginTop="40dp"
                     android:layout_marginStart="50dp"
                     tools:layout_editor_absoluteY="15dp"
@@ -93,23 +98,26 @@
 
                 <LinearLayout
                     android:id="@+id/propertyType"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_margin="20dp"
+                    android:weightSum="2"
+                    android:layout_marginEnd="20dp"
                     app:layout_constraintVertical_bias="0.05"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/heading"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/heading">
 
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/card_single"
-                        android:layout_width="180dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="20dp"
-                        app:strokeColor="@color/subtitle"
-                        app:strokeWidth="1dp">
+                        android:layout_marginVertical="20dp"
+                        app:cardBackgroundColor="@color/white"
+                        app:strokeColor="@color/grey10"
+                        app:strokeWidth="2dp"
+                        android:layout_weight="1">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -139,11 +147,14 @@
 
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/card_chain"
-                        android:layout_width="180dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="20dp"
-                        app:strokeColor="@color/subtitle"
-                        app:strokeWidth="1dp">
+                        android:layout_marginVertical="20dp"
+                        android:layout_marginHorizontal="20dp"
+                        app:cardBackgroundColor="@color/white"
+                        app:strokeColor="@color/grey10"
+                        app:strokeWidth="2dp"
+                        android:layout_weight="1">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -181,6 +192,7 @@
                     android:id="@+id/card_SingleNext"
                     android:layout_width="170dp"
                     android:layout_height="50dp"
+                    android:transitionName="Btn"
                     android:backgroundTint="@color/secondary"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintHorizontal_bias="0.8"
