--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -2,24 +2,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".onboarding.authentication.LoginScreen">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frame1"
-        android:layout_width="700dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:background="@color/secondaryBackground"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/secondaryBackground"
-        >
+        app:layout_constraintEnd_toStartOf="@id/cardF">
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="300dp"
             android:layout_height="120dp"
+            android:transitionName="logo_img"
             android:layout_marginTop="25dp"
             android:src="@drawable/svg_logo"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,9 +31,10 @@
         <TextView
             android:id="@+id/title1"
             style="@style/OnboardingHeadingTextStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/world_s_only_one_stop_hotel_solution_software_with_ai"
+            android:layout_marginHorizontal="10dp"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,17 +43,21 @@
         <TextView
             android:id="@+id/title2"
             style="@style/OnboardingSubHeadingTextStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:text="@string/a_complete_suite_of_hotel_solutions"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/title1"
+            app:layout_constraintStart_toStartOf="@id/title1"
             app:layout_constraintTop_toBottomOf="@+id/title1" />
 
         <ImageView
+            android:id="@+id/onBoardingImg"
             android:layout_width="400dp"
-            android:layout_height="500dp"
+            android:layout_height="0dp"
             android:src="@drawable/vector_login"
+            android:transitionName="onBoardingImg"
+            android:layout_marginVertical="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +66,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardF"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintStart_toEndOf="@+id/frame1"
@@ -77,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="100dp"
+                android:transitionName="login_board"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -119,122 +128,130 @@
 
             </LinearLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/auth_Code_layout"
-                android:layout_width="@dimen/editTextWidth"
+            <LinearLayout
+                android:id="@+id/ll1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:hint="Hotel R code"
-                app:startIconDrawable="@drawable/svg_hotel_code"
-                app:hintTextColor="@color/secondary"
-                android:textColorHint="@color/black"
-                android:layout_marginTop="40dp"
-                app:boxStrokeWidthFocused="2dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:endIconMode="clear_text"
-                app:endIconTint="@color/black"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="50dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/loginTitle">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/auth_Code"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/auth_Code_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textColorHint="@color/secondary"
-                    android:fontFamily="@font/roboto"
-                    android:inputType="text"
-                    android:textColor="@color/secondary" />
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:hint="Hotel R code"
+                    app:startIconDrawable="@drawable/svg_hotel_code"
+                    app:startIconTint="@color/black"
+                    android:layout_marginTop="40dp"
+                    app:boxStrokeWidthFocused="2dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:endIconMode="clear_text"
+                    app:endIconTint="@color/black">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/auth_Code"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColorHint="@color/secondary"
+                        android:fontFamily="@font/roboto"
+                        android:inputType="text"
+                        android:textColor="@color/secondary" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/username_layout"
-                android:layout_width="@dimen/editTextWidth"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:hint="Username"
-                app:startIconDrawable="@drawable/svg_username"
-                android:textColorHint="@color/black"
-                app:boxStrokeColor="@color/black"
-                android:layout_marginTop="15dp"
-                app:boxStrokeWidthFocused="2dp"
-                app:hintTextColor="@color/secondary"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:endIconMode="clear_text"
-                app:endIconTint="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/auth_Code_layout">
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/username"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/username_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/roboto"
-                    android:inputType="text"
-                    android:textColorHint="@color/secondary"
-                    android:textColor="@color/secondary" />
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:hint="Username"
+                    app:startIconDrawable="@drawable/svg_username"
+                    app:startIconTint="@color/black"
+                    app:boxStrokeColor="@color/black"
+                    android:layout_marginTop="15dp"
+                    app:boxStrokeWidthFocused="2dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:endIconMode="clear_text"
+                    app:endIconTint="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/auth_Code_layout">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/username"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
+                        android:inputType="text"
+                        android:textColorHint="@color/secondary"
+                        android:textColor="@color/secondary" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/password_layout"
-                android:layout_width="@dimen/editTextWidth"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:hint="Password"
-                app:startIconDrawable="@drawable/svg_key"
-                android:textColorHint="@color/black"
-                app:boxStrokeColor="@color/black"
-                app:hintTextColor="@color/secondary"
-                android:layout_marginTop="15dp"
-                app:boxStrokeWidthFocused="2dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:endIconMode="password_toggle"
-                app:endIconTint="@color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/username_layout">
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/password"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/password_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/roboto"
-                    android:inputType="text"
-                    android:textColorHint="@color/secondary"
-                    android:textColor="@color/secondary" />
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:hint="Password"
+                    app:startIconDrawable="@drawable/svg_key"
+                    app:startIconTint="@color/black"
+                    app:boxStrokeColor="@color/black"
+                    android:layout_marginTop="15dp"
+                    app:boxStrokeWidthFocused="2dp"
+                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxCornerRadiusBottomStart="10dp"
+                    app:boxCornerRadiusBottomEnd="10dp"
+                    app:boxCornerRadiusTopEnd="10dp"
+                    app:endIconMode="password_toggle"
+                    app:endIconTint="@color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/username_layout">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
+                        android:inputType="text"
+                        android:textColorHint="@color/secondary"
+                        android:textColor="@color/secondary" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/forgot_pass_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Forgot Password ?"
-                app:layout_constraintTop_toBottomOf="@+id/password_layout"
-                app:layout_constraintEnd_toEndOf="@+id/password_layout"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/secondary"
                 android:textFontWeight="400"
                 android:fontFamily="@font/roboto"
-                android:textSize="15dp" />
+                android:textSize="15dp"
+                app:layout_constraintEnd_toEndOf="@id/ll1"
+                app:layout_constraintTop_toBottomOf="@id/ll1"/>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/signIn_Card"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
-                app:layout_constraintTop_toBottomOf="@+id/password_layout"
+                android:transitionName="Btn"
+                app:layout_constraintTop_toBottomOf="@+id/ll1"
                 android:layout_marginTop="75dp"
                 app:cardBackgroundColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
