--- a/app/src/main/res/layout/activity_second_chain_onboarding.xml
+++ b/app/src/main/res/layout/activity_second_chain_onboarding.xml
@@ -4,21 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OnBoarding.ChainHotel.OnboardingChainSecondActivity">
+    tools:context=".onboarding.chainHotelOnboarding.SecondChainOnboardingActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frame1"
-        android:layout_width="700dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:background="@color/secondaryBackground"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/secondaryBackground">
+        app:layout_constraintEnd_toStartOf="@id/frame2">
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="300dp"
             android:layout_height="120dp"
+            android:transitionName="logo_img"
             android:layout_marginTop="25dp"
             android:src="@drawable/svg_logo"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,8 +39,10 @@
             app:layout_constraintTop_toBottomOf="@id/logo"/>
 
         <ImageView
+            android:id="@+id/onBoardingImg"
             android:layout_width="400dp"
-            android:layout_height="500dp"
+            android:layout_height="0dp"
+            android:transitionName="onBoardingImg"
             android:src="@drawable/svg_property"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -70,18 +74,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/vector_back_btn"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:transitionName="backBtn"
                     android:layout_marginTop="40dp"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="50dp"
                     tools:layout_editor_absoluteY="15dp"
-                    tools:ignore="MissingConstraints" />
+                    tools:ignore="MissingConstraints"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
 
                 <LinearLayout
                     android:id="@+id/llBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:visibility="gone"
                     android:layout_marginStart="30dp"
                     app:layout_constraintTop_toTopOf="@id/demoBackbtn"
                     app:layout_constraintBottom_toBottomOf="@id/demoBackbtn"
@@ -125,13 +131,35 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/heading">
 
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/cardImg"
+                        android:layout_width="110dp"
+                        android:layout_height="0dp"
+                        android:layout_marginEnd="50dp"
+                        android:layout_marginTop="5dp"
+                        app:strokeWidth="2dp"
+                        app:cardBackgroundColor="@color/white"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/propertyChainLayout"
+                        app:layout_constraintBottom_toBottomOf="@id/nop">
+
+                        <ImageView
+                            android:id="@+id/selectImg"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="10dp"
+                            android:src="@drawable/svg_gallery"/>
+
+                    </com.google.android.material.card.MaterialCardView>
+
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/propertyTypeLayout"
+                        android:id="@+id/propertyChainLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:hint="Property Chain Name"
-                        android:layout_marginHorizontal="80dp"
+                        android:layout_marginStart="50dp"
+                        android:layout_marginEnd="10dp"
                         android:textColorHint="@color/black"
                         app:boxStrokeColor="@color/black"
                         app:hintTextColor="@color/secondary"
@@ -143,12 +171,12 @@
                         app:boxCornerRadiusTopEnd="10dp"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/cardImg"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/propertyTypeText"
+                            android:id="@+id/propertyChainText"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
@@ -157,6 +185,70 @@
                             android:textColor="@color/secondary" />
 
                     </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/nop"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_marginTop="15dp"
+                        app:cardCornerRadius="10dp"
+                        app:strokeColor="@color/subtitle"
+                        app:cardBackgroundColor="@color/white"
+                        app:layout_constraintTop_toBottomOf="@id/propertyChainLayout"
+                        app:layout_constraintStart_toStartOf="@id/propertyChainLayout"
+                        app:layout_constraintEnd_toEndOf="@id/propertyChainLayout">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/rate"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Number of Properties"
+                                android:textSize="16sp"
+                                android:textColor="@color/black"
+                                android:fontFamily="@font/roboto"
+                                android:layout_marginStart="16dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"/>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginEnd="10dp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintBottom_toBottomOf="@id/rate"
+                                app:layout_constraintTop_toTopOf="@id/rate">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/svg_remove"/>
+
+                                <TextView
+                                    android:id="@+id/rateCount"
+                                    android:layout_width="50dp"
+                                    android:layout_height="wrap_content"
+                                    android:text="1"
+                                    android:textAlignment="center"
+                                    android:textSize="@dimen/H5"
+                                    android:textColor="@color/black"
+                                    android:fontFamily="@font/roboto_bold"/>
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/svg_add"/>
+
+                            </LinearLayout>
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/TaxNameLayout"
@@ -175,9 +267,9 @@
                         app:boxCornerRadiusTopEnd="10dp"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
-                        app:layout_constraintStart_toStartOf="@id/propertyTypeLayout"
-                        app:layout_constraintTop_toBottomOf="@id/propertyTypeLayout"
-                        app:layout_constraintEnd_toEndOf="@id/propertyTypeLayout">
+                        app:layout_constraintStart_toStartOf="@id/nop"
+                        app:layout_constraintTop_toBottomOf="@id/nop"
+                        app:layout_constraintEnd_toEndOf="@id/cardImg">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/TaxNameText"
@@ -218,7 +310,10 @@
                             android:fontFamily="@font/roboto"
                             android:inputType="text"
                             android:textColorHint="@color/secondary"
-                            android:textColor="@color/secondary" />
+                            android:textColor="@color/secondary"
+                            android:editable="false"
+                            android:clickable="true"
+                            android:focusable="false"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -250,71 +345,23 @@
                             android:fontFamily="@font/roboto"
                             android:inputType="text"
                             android:textColorHint="@color/secondary"
-                            android:textColor="@color/secondary" />
+                            android:textColor="@color/secondary"
+                            android:editable="false"
+                            android:clickable="true"
+                            android:focusable="false"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <TextView
-                        android:id="@+id/rate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Number of Properties"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:fontFamily="@font/roboto_bold"
-                        android:layout_marginTop="40dp"
-                        android:layout_marginStart="16dp"
-                        app:layout_constraintTop_toBottomOf="@id/baseCurrencyLayout"
-                        app:layout_constraintStart_toStartOf="@id/registrationNumberLayout"/>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginEnd="20dp"
-                        app:layout_constraintEnd_toStartOf="@id/selectImg"
-                        app:layout_constraintBottom_toBottomOf="@id/rate"
-                        app:layout_constraintTop_toTopOf="@id/rate">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/svg_remove"/>
-
-                        <TextView
-                            android:id="@+id/rateCount"
-                            android:layout_width="50dp"
-                            android:layout_height="wrap_content"
-                            android:text="1"
-                            android:textAlignment="center"
-                            android:textSize="@dimen/H5"
-                            android:textColor="@color/black"
-                            android:fontFamily="@font/roboto_bold"/>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/svg_add"/>
-
-                    </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/selectImg"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/svg_gallery"
-                        app:layout_constraintTop_toTopOf="@id/rate"
-                        app:layout_constraintBottom_toBottomOf="@id/rate"
-                        app:layout_constraintEnd_toEndOf="@id/baseCurrencyLayout"/>
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/card_SingleNext"
                         android:layout_width="170dp"
                         android:layout_height="50dp"
+                        android:transitionName="Btn"
                         android:backgroundTint="@color/secondary"
                         app:layout_constraintVertical_bias="0.9"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="@id/propertyTypeLayout">
+                        app:layout_constraintEnd_toEndOf="@id/cardImg">
 
                         <TextView
                             android:layout_width="wrap_content"
