--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,8 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:layoutDirection">ltr</item>
+
+        <item name="android:windowContentTransitions">true</item>
     </style>
 
     <style name="Theme.RConnectFE" parent="Base.Theme.RConnectFE" />
