--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawerLayout"
-    tools:context=".dashboard.chainDashboard.ChainDashboardActivity">
+    tools:context=".dashboard.Dashboard.DashboardActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -211,6 +211,7 @@
                 android:layout_marginTop="18dp"/>
 
             <TextView
+                android:id="@+id/letsText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/secondary"
@@ -245,138 +246,6 @@
             </LinearLayout>
 
         </LinearLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/addPropertyLayout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/secondary"
-                android:text="Add Property"
-                android:textSize="@dimen/H1"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="15dp"
-                android:fontFamily="@font/roboto_bold"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
-
-            <TextView
-                android:id="@+id/cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cancel"
-                android:layout_gravity="center"
-                android:fontFamily="@font/roboto_bold"
-                android:textSize="@dimen/H5"
-                android:padding="15dp"
-                android:layout_marginEnd="25dp"
-                android:textColor="@color/black"
-                app:layout_constraintEnd_toStartOf="@id/continueBtn"
-                app:layout_constraintBottom_toBottomOf="@id/continueBtn"
-                app:layout_constraintTop_toTopOf="@id/continueBtn"/>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/continueBtn"
-                android:layout_width="110dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="20dp"
-                android:clickable="true"
-                android:backgroundTint="@color/black"
-                app:cardCornerRadius="10dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:focusable="true">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Continue"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/roboto_bold"
-                    android:textSize="@dimen/H5"
-                    android:textColor="@color/white"/>
-
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:id="@+id/ll1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="3"
-                android:layout_marginHorizontal="10dp"
-                app:layout_constraintTop_toBottomOf="@id/continueBtn"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <TextView
-                    android:id="@+id/propertyProfile"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/secondary"
-                    android:text="Property Profile"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/H3"
-                    android:paddingVertical="5dp"
-                    android:background="@drawable/corner_top_grey_background"
-                    android:layout_weight="1"
-                    android:layout_marginTop="15dp"
-                    android:fontFamily="@font/roboto_bold"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-                <TextView
-                    android:id="@+id/addressAndContacts"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/secondary"
-                    android:text="Address and contacts"
-                    android:textAlignment="center"
-                    android:background="@drawable/corner_top_grey_background"
-                    android:layout_weight="1"
-                    android:textSize="@dimen/H4"
-                    android:paddingVertical="5dp"
-                    android:layout_marginHorizontal="10dp"
-                    android:layout_marginTop="15dp"
-                    android:fontFamily="@font/roboto"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-                <TextView
-                    android:id="@+id/roomsAndAmenities"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/secondary"
-                    android:text="Rooms &amp; Amenities"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/H4"
-                    android:paddingVertical="5dp"
-                    android:background="@drawable/corner_top_grey_background"
-                    android:layout_weight="1"
-                    android:layout_marginTop="15dp"
-                    android:fontFamily="@font/roboto"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-
-
-            </LinearLayout>
-
-            <FrameLayout
-                android:id="@+id/propertyFragmentContainer"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/ll1"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <FrameLayout
             android:id="@+id/dashboardFragmentContainer"
