--- a/app/src/main/res/layout/activity_second_chain_onboarding.xml
+++ b/app/src/main/res/layout/activity_second_chain_onboarding.xml
@@ -76,7 +76,7 @@
                     android:src="@drawable/vector_back_btn"
                     android:transitionName="backBtn"
                     android:layout_marginTop="40dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="70dp"
                     tools:layout_editor_absoluteY="15dp"
                     tools:ignore="MissingConstraints"
                     app:layout_constraintTop_toTopOf="parent"
@@ -110,7 +110,7 @@
 
                 <TextView
                     android:id="@+id/heading"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/let_s_create_your_property_chain_s_profile"
                     android:textSize="@dimen/H2"
@@ -118,8 +118,7 @@
                     android:textColor="@color/black"
                     android:fontFamily="@font/roboto_bold"
                     android:layout_marginTop="40dp"
-                    android:layout_marginStart="50dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/demoBackbtn"
                     app:layout_constraintTop_toBottomOf="@id/llBar"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -135,9 +134,10 @@
                         android:id="@+id/cardImg"
                         android:layout_width="110dp"
                         android:layout_height="0dp"
-                        android:layout_marginEnd="50dp"
+                        android:layout_marginEnd="70dp"
                         android:layout_marginTop="5dp"
                         app:strokeWidth="2dp"
+                        app:cardElevation="2dp"
                         app:cardBackgroundColor="@color/white"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@id/propertyChainLayout"
@@ -148,9 +148,116 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_margin="10dp"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/svg_gallery"/>
 
                     </com.google.android.material.card.MaterialCardView>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        android:orientation="vertical"
+                        android:background="@color/white"
+                        app:layout_constraintTop_toBottomOf="@id/cardImg"
+                        app:layout_constraintStart_toStartOf="@id/cardImg"
+                        app:layout_constraintEnd_toEndOf="@id/cardImg">
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/svg_upper_triangle"
+                            android:elevation="20dp"
+                            app:tint="@color/lightBlack"/>
+                        <com.google.android.material.card.MaterialCardView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            app:cardBackgroundColor="@color/lightBlack"
+                            app:cardElevation="12dp"
+                            android:elevation="20dp"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginHorizontal="15dp"
+                            app:cardCornerRadius="12dp">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="12dp"
+                                    android:orientation="vertical">
+                                    <ImageView
+                                        android:layout_width="16dp"
+                                        android:layout_height="16dp"
+                                        android:src="@drawable/svg_gallery_edit"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Replace"
+
+                                        android:textColor="@color/white"
+                                        android:fontFamily="@font/roboto_medium"/>
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:padding="12dp"
+                                    android:orientation="vertical">
+                                    <ImageView
+                                        android:layout_width="16dp"
+                                        android:layout_height="16dp"
+                                        android:src="@drawable/svg_gallery_remove"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Remove"
+                                        android:textColor="@color/white"
+
+                                        android:fontFamily="@font/roboto_medium"/>
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+                        </com.google.android.material.card.MaterialCardView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/imageEditLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        android:gravity="center"
+                        android:weightSum="2"
+                        android:layout_marginTop="4dp"
+                        android:paddingHorizontal="8dp"
+                        app:layout_constraintBottom_toBottomOf="@id/cardImg"
+                        app:layout_constraintTop_toTopOf="@id/cardImg"
+                        app:layout_constraintStart_toEndOf="@id/cardImg">
+
+                        <ImageView
+                            android:id="@+id/replaceImage"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            app:tint="@color/black"
+                            android:layout_weight="1"
+                            android:src="@drawable/svg_gallery_edit"/>
+
+                        <ImageView
+                            android:id="@+id/removeImage"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:src="@drawable/svg_gallery_remove"
+                            android:layout_weight="1"
+                            app:tint="@color/black"/>
+
+                    </LinearLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/propertyChainLayout"
@@ -158,7 +265,7 @@
                         android:layout_height="wrap_content"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:hint="Property Chain Name"
-                        android:layout_marginStart="50dp"
+                        android:layout_marginStart="70dp"
                         android:layout_marginEnd="10dp"
                         android:textColorHint="@color/black"
                         app:boxStrokeColor="@color/black"
@@ -218,31 +325,36 @@
                             <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal"
                                 android:layout_marginEnd="10dp"
-                                app:layout_constraintEnd_toEndOf="parent"
+                                android:orientation="horizontal"
                                 app:layout_constraintBottom_toBottomOf="@id/rate"
+                                app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="@id/rate">
 
                                 <ImageView
+                                    android:id="@+id/remove"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:src="@drawable/svg_remove"/>
+                                    android:src="@drawable/svg_remove" />
 
-                                <TextView
-                                    android:id="@+id/rateCount"
-                                    android:layout_width="50dp"
+                                <EditText
+                                    android:id="@+id/propertyCountEditText"
+                                    android:layout_width="@dimen/countingEditTextWidth"
                                     android:layout_height="wrap_content"
+                                    style="@style/TextAppearance.AppCompat.Body1"
+                                    android:background="@null"
+                                    android:fontFamily="@font/roboto_bold"
                                     android:text="1"
+                                    android:inputType="number"
                                     android:textAlignment="center"
-                                    android:textSize="@dimen/H5"
                                     android:textColor="@color/black"
-                                    android:fontFamily="@font/roboto_bold"/>
+                                    android:textSize="@dimen/H5" />
 
                                 <ImageView
+                                    android:id="@+id/add"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:src="@drawable/svg_add"/>
+                                    android:src="@drawable/svg_add" />
 
                             </LinearLayout>
 
