--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
@@ -144,7 +144,7 @@
                     app:layout_constraintTop_toBottomOf="@id/recyclerView">
 
                     <LinearLayout
-                        android:id="@+id/ll1"
+                        android:id="@+id/ll5"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
@@ -266,21 +266,27 @@
                                     app:layout_constraintTop_toTopOf="parent">
 
                                     <ImageView
+                                        android:id="@+id/removeRooms"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:src="@drawable/svg_remove"/>
 
-                                    <TextView
+                                    <EditText
                                         android:id="@+id/roomCount"
-                                        android:layout_width="50dp"
+                                        android:layout_width="@dimen/countingEditTextWidth"
+                                        style="@style/TextAppearance.AppCompat.Body1"
+                                        android:background="@null"
                                         android:layout_height="wrap_content"
                                         android:text="1"
+                                        android:maxLength="4"
+                                        android:inputType="number"
                                         android:textAlignment="center"
                                         android:textSize="@dimen/H5"
                                         android:textColor="@color/black"
                                         android:fontFamily="@font/roboto_bold"/>
 
                                     <ImageView
+                                        android:id="@+id/addRooms"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:src="@drawable/svg_add"/>
@@ -381,21 +387,27 @@
                                     app:layout_constraintTop_toTopOf="parent">
 
                                     <ImageView
+                                        android:id="@+id/removeRate"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:src="@drawable/svg_remove"/>
 
-                                    <TextView
+                                    <EditText
                                         android:id="@+id/rateCount"
-                                        android:layout_width="50dp"
+                                        android:layout_width="@dimen/countingEditTextWidth"
+                                        style="@style/TextAppearance.AppCompat.Body1"
+                                        android:background="@null"
+                                        android:inputType="numberDecimal"
                                         android:layout_height="wrap_content"
-                                        android:text="1"
+                                        android:text="1.0"
+                                        android:maxLength="5"
                                         android:textAlignment="center"
                                         android:textSize="@dimen/H5"
                                         android:textColor="@color/black"
                                         android:fontFamily="@font/roboto_bold"/>
 
                                     <ImageView
+                                        android:id="@+id/addRate"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:src="@drawable/svg_add"/>
@@ -414,8 +426,8 @@
                         android:orientation="horizontal"
                         android:visibility="gone"
                         android:layout_marginTop="10dp"
-                        app:layout_constraintTop_toBottomOf="@id/ll1"
-                        app:layout_constraintEnd_toEndOf="@id/ll1">
+                        app:layout_constraintTop_toBottomOf="@id/ll5"
+                        app:layout_constraintEnd_toEndOf="@id/ll5">
 
                         <TextView
                             android:id="@+id/cancel"
@@ -451,7 +463,7 @@
                         app:layout_constraintVertical_bias="0.8"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/ll4"
-                        app:layout_constraintEnd_toEndOf="@id/ll1">
+                        app:layout_constraintEnd_toEndOf="@id/ll5">
 
                         <TextView
                             android:layout_width="wrap_content"
