--- a/app/src/main/res/layout/fragment_view_properties.xml
+++ b/app/src/main/res/layout/fragment_view_properties.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".dashboard.chainDashboard.ViewPropertiesFragment"
+    tools:context=".dashboard.Dashboard.ViewPropertiesFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -72,7 +72,7 @@
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:id="@+id/ll1"
+            android:id="@+id/ll5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -140,8 +140,8 @@
             android:orientation="horizontal"
             android:layout_marginEnd="10dp"
             android:gravity="center_vertical"
-            app:layout_constraintTop_toTopOf="@id/ll1"
-            app:layout_constraintBottom_toBottomOf="@id/ll1"
+            app:layout_constraintTop_toTopOf="@id/ll5"
+            app:layout_constraintBottom_toBottomOf="@id/ll5"
             app:layout_constraintEnd_toEndOf="@id/addNewProperty">
 
             <TextView
